initialize main files

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>Empty Page</title>
 
     <!-- CSS files -->
-    <link rel="stylesheet" href="./css/style.css">
-    </link>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style_mobile.css" />
+    <link rel="stylesheet" href="./css/style_desktop.css" />
 </head>
 
 <body>
     <header>
-        Contenu de votre page...
+        <h1>Contenu de votre page...</h1>
     </header>
     <main>
         <article>
