add header part

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 </head>
 
 <body>
-    <header>
-        <h1>Contenu de votre page...</h1>
+    <header class="header-container">
+        <img src="/images/logo/ohmyfood.png" alt="Logo de l'application OhMyFood"/>
     </header>
     <main>
+        <section>
+
+        </section>
         <article>
             <h2>Granny Smith</h2>
             <p>... </p>
