--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header-container">
-        <img src="/images/logo/ohmyfood.png" alt="Logo de l'application OhMyFood"/>
+        <img src="./images/logo/ohmyfood.png" alt="Logo de l'application OhMyFood"/>
     </header>
     <main>
         <section>
