--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empty Page</title>
 
+    <!-- FontAwesome Import -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- CSS files -->
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/style_mobile.css" />
@@ -18,14 +21,42 @@
         <img src="./images/logo/ohmyfood.png" alt="Logo de l'application OhMyFood"/>
     </header>
     <main>
-        <section>
-
+        <div class="location-field flex -center -middle -gap17">
+            <i class="fa-solid fa-location-dot"></i>
+            <span>Paris, Belleville</span>
+        </div>
+        <section class="section-container">
+            <div class="section-content flex -column -center -middle -gap40">
+                <h1 class="section-title">Réservez le menu qui vous convient</h1>
+                <span>Découvrez des restaurants d’exception, sélectionnés par nos soins.</span>
+                <button class="button-rounded">Explorer nos restaurants</button>
+            </div>
         </section>
-        <article>
-            <h2>Granny Smith</h2>
-            <p>... </p>
-            <p>... </p>
-        </article>
+        <section class="section-container -light">
+            <div class="section-content flex -column -center -middle -gap40">
+                <h2 class="section-sub-title">Fonctionnement</h2>
+            </div>
+        </section>
+        <section class="section-container">
+            <div class="section-content flex -column -center -middle -gap40">
+                <h2 class="section-sub-title">Restaurants</h2>
+                <article>
+                    <img src="" alt="">
+                    <div>
+                        <h3>La palette du goût</h3>
+                        <span>Ménilmontant</span>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-location-dot"></i>
+                    </div>
+                </article>
+                <article></article>
+                <article></article>
+                <article></article>
+            </div>
+        </section>
+
+        <button class="button-rounded">Explorez les menus</button>
     </main>
     <footer>
         footer page.
