--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <article class="card">
                             <div class="card-image">
                                 <span class="image-flag">Nouveau</span>
-                                <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                             </div>
                             <div class="card-content flex -middle -between">
                                 <div class="flex -column -gap5">
@@ -77,7 +77,7 @@
                         <article class="card">
                             <div class="card-image">
                                 <span class="image-flag">Nouveau</span>
-                                <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                             </div>
                             <div class="card-content flex -middle -between">
                                 <div class="flex -column -gap5">
@@ -91,7 +91,7 @@
                     <a href="/restaurants/la_palette_du_gout.html">
                         <article class="card">
                             <div class="card-image">
-                                <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                                <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                             </div>
                             <div class="card-content flex -middle -between">
                                 <div class="flex -column -gap5">
@@ -105,7 +105,7 @@
                     <a href="/restaurants/la_palette_du_gout.html">
                         <article class="card">
                             <div class="card-image">
-                                <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                                <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                             </div>
                             <div class="card-content flex -middle -between">
                                 <div class="flex -column -gap5">
