--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <div class="card-content flex -middle -between">
                                 <div class="flex -column -gap5">
                                     <h3>La palette du goût</h3>
-                                    <span class="text -card-title">Ménilmontant</span>
+                                    <h4 class="text -card-title">Ménilmontant</h4>
                                 </div>
                                 <input class="heart-icon" type="checkbox">
                             </div>
@@ -82,7 +82,7 @@
                             <div class="card-content flex -middle -between">
                                 <div class="flex -column -gap5">
                                     <h3>La note enchantée</h3>
-                                    <span class="text -card-title">Charonne</span>
+                                    <h4 class="text -card-title">Charonne</h4>
                                 </div>
                                 <input class="heart-icon" type="checkbox" checked>
                             </div>
@@ -96,7 +96,7 @@
                             <div class="card-content flex -middle -between">
                                 <div class="flex -column -gap5">
                                     <h3>À la française</h3>
-                                    <span class="text -card-title">Cité Rouge</span>
+                                    <h4 class="text -card-title">Cité Rouge</h4>
                                 </div>
                                 <input class="heart-icon" type="checkbox">
                             </div>
@@ -110,7 +110,7 @@
                             <div class="card-content flex -middle -between">
                                 <div class="flex -column -gap5">
                                     <h3>Le délice des sens</h3>
-                                    <span class="text -card-title">Folie-Méricourt</span>
+                                    <h4 class="text -card-title">Folie-Méricourt</h4>
                                 </div>
                                 <input class="heart-icon" type="checkbox">
                             </div>
@@ -119,11 +119,29 @@
                 </div>
             </div>
         </section>
-
-        <button class="button-rounded">Explorez les menus</button>
     </main>
-    <footer>
-        footer page.
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-links">
+                <div class="footer-illustrated-link">
+                    <a href="">
+                        <i class="fa-solid fa-utensils"></i>
+                        <span>Proposer un restaurant</span>
+                    </a>
+                    <a href="">
+                        <i class="fa-solid fa-handshake-angle"></i>
+                        <span>Devenir partenaire</span>
+                    </a>
+                </div>
+                <div class="footer-link">
+                    <a href="">Mentions légales</a>
+                    <a href="">Contact</a>
+                </div>
+            </div>
+            <div class="footer-logo">
+                <span>ohmyfood</span>
+            </div>
+        </div>
     </footer>
 
 </body>
