add loading effect

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div class="loader"></div>
     <header class="header-container">
         <img src="./images/logo/ohmyfood.png" alt="Logo de l'application OhMyFood"/>
     </header>
@@ -84,7 +85,7 @@
                                     <h3>La note enchantée</h3>
                                     <h4 class="text -card-title">Charonne</h4>
                                 </div>
-                                <input class="heart-icon" type="checkbox" checked>
+                                <input class="heart-icon" type="checkbox">
                             </div>
                         </article>
                     </a>
