--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
             <span>Paris, Belleville</span>
         </div>
         <section class="section-container">
-            <div class="section-content -s30 flex -column -center -middle -gap30">
-                <h1 class="section-title -g1">Réservez le menu qui vous convient</h1>
-                <span class="text -dark-light">Découvrez des restaurants d’exception, sélectionnés par nos soins.</span>
+            <div class="section-content -s30 flex -column -center -middle -gap30 -mobile-gap30">
+                <div class="section-content -h30 flex -column -center -middle -gap30 -mobile-gap10">
+                    <h1 class="section-title">Réservez le menu qui vous convient</h1>
+                    <span class="text -dark-light -mobile-centered">Découvrez des restaurants d’exception, sélectionnés par nos soins.</span>
+                </div>
                 <button class="button-rounded">Explorer nos restaurants</button>
             </div>
         </section>
         <section class="section-container -light">
-            <div class="section-content -s50 flex -column -center -gap20">
+            <div class="section-content -s50 flex -column -center -gap20 -mobile-h20 -mobile-v40">
                 <h2 class="section-sub-title">Fonctionnement</h2>
                 <div class="flex -row -gap40">
                     <div class="card-info -g1">
@@ -56,11 +58,11 @@
             </div>
         </section>
         <section class="section-container">
-            <div class="section-content -s40 flex -wrap -center -column -gap40">
+            <div class="section-content -s40 -mobile-h20 -mobile-v50 flex -wrap -center -column -gap40 -mobile-gap20">
                 <h2 class="section-sub-title">Restaurants</h2>
-                <div class="card-container grid -c2 -gap17-40">
+                <div class="card-container -c2 -gap17-40">
                     <article class="card">
-                        <a href="/restaurants/la_palette_du_gout.html">
+                        <a href="./restaurants/la_palette_du_gout.html">
                             <div class="card-image">
                                 <span class="image-flag">Nouveau</span>
                                 <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
@@ -68,7 +70,7 @@
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
-                                <a href="/restaurants/la_palette_du_gout.html">
+                                <a href="./restaurants/la_palette_du_gout.html">
                                     <h3>La palette du goût</h3>
                                     <h4 class="text -card-title">Ménilmontant</h4>
                                 </a>
@@ -77,7 +79,7 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a href="/restaurants/la_palette_du_gout.html">
+                        <a href="./restaurants/la_palette_du_gout.html">
                             <div class="card-image">
                                 <span class="image-flag">Nouveau</span>
                                 <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
@@ -85,7 +87,7 @@
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
-                                <a href="/restaurants/la_palette_du_gout.html">
+                                <a href="./restaurants/la_palette_du_gout.html">
                                     <h3>La note enchantée</h3>
                                     <h4 class="text -card-title">Charonne</h4>
                                 </a>
@@ -94,14 +96,14 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a href="/restaurants/la_palette_du_gout.html">
+                        <a href="./restaurants/la_palette_du_gout.html">
                         <div class="card-image">
                             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                         </div>
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
-                                <a href="/restaurants/la_palette_du_gout.html">
+                                <a href="./restaurants/la_palette_du_gout.html">
                                     <h3>À la française</h3>
                                     <h4 class="text -card-title">Cité Rouge</h4>
                                 </a>
@@ -110,14 +112,14 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a class="prevent-event" href="/restaurants/la_palette_du_gout.html">
+                        <a class="prevent-event" href="./restaurants/la_palette_du_gout.html">
                         <div class="card-image">
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                         </div>
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
-                                <a class="prevent-event" href="/restaurants/la_palette_du_gout.html">
+                                <a class="prevent-event" href="./restaurants/la_palette_du_gout.html">
                                     <h3>Le délice des sens</h3>
                                     <h4 class="text -card-title">Folie-Méricourt</h4>
                                 </a>
