add restaurant page content

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
     <!-- CSS files -->
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/style_mobile.css" />
-    <link rel="stylesheet" href="./css/style_desktop.css" />
 </head>
 
 <body>
@@ -112,7 +110,7 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a class="prevent-event" href="./restaurants/la_palette_du_gout.html">
+                        <a href="./restaurants/la_palette_du_gout.html">
                         <div class="card-image">
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                         </div>
