--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="./restaurants/la_palette_du_gout.html">
                             <div class="card-image">
                                 <span class="image-flag">Nouveau</span>
-                                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de couverture du restaurant La palette du goût">
                             </div>
                         </a>
                         <div class="card-content flex -middle -between">
@@ -80,7 +80,7 @@
                         <a href="./restaurants/la_palette_du_gout.html">
                             <div class="card-image">
                                 <span class="image-flag">Nouveau</span>
-                                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de couverture du restaurant La note enchantée">
                             </div>
                         </a>
                         <div class="card-content flex -middle -between">
@@ -96,7 +96,7 @@
                     <article class="card">
                         <a href="./restaurants/la_palette_du_gout.html">
                         <div class="card-image">
-                            <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                            <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de couverture du restaurant À la française">
                         </div>
                         </a>
                         <div class="card-content flex -middle -between">
@@ -112,7 +112,7 @@
                     <article class="card">
                         <a href="./restaurants/la_palette_du_gout.html">
                         <div class="card-image">
-                            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de couverture du restaurant Le délice des sens">
                         </div>
                         </a>
                         <div class="card-content flex -middle -between">
