add restaurant page content

--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -21,14 +21,60 @@
         </a>
         <img src="../images/logo/ohmyfood.png" alt="Logo de l'application OhMyFood"/>
     </header>
-<main>
-    <div class="thumbnail-image">
-        <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-    </div>
-    <section class="section-container -light">
-        <div class="section-content -grey -index-1 -rounded -s50 flex -column -center -gap20">
-            <h1>La pallette du goût</h1>
+    <main>
+        <div class="thumbnail-image">
+            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
         </div>
-    </section>
-</main>
+        <section class="section-container -light">
+            <div class="section-content -grey -index-1 -rounded -v50 -h100 flex -column -gap40">
+                <div class="flex -center -middle -gap20">
+                    <h1 class="section-title -secondary">La pallette du goût</h1>
+                    <input class="heart-icon -s24" type="checkbox">
+                </div>
+                <section class="section-menu flex -column -gap12">
+                    <h2 class="text -under-line -upper">Entrées</h2>
+                    <div class="grid -gap12">
+                        <div class="card -card-menu flex -nowrap">
+                            <div class="section-content -h15 -v10 flex -nowrap">
+                                <div class="card-menu-description -g1">
+                                    <h3>Fricassée d'escargots</h3>
+                                    <span class="text">Au piment d'Espelette</span>
+                                </div>
+                                <div class="flex -bottom">
+                                    <span class="text -extra-bold">25€</span>
+                                </div>
+                            </div>
+                            <div class="card-menu-success">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                        <div class="card -g1">Entrées</div>
+                    </div>
+                </section>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-links">
+                <div class="footer-illustrated-link">
+                    <a href="">
+                        <i class="fa-solid fa-utensils"></i>
+                        <span>Proposer un restaurant</span>
+                    </a>
+                    <a href="">
+                        <i class="fa-solid fa-handshake-angle"></i>
+                        <span>Devenir partenaire</span>
+                    </a>
+                </div>
+                <div class="footer-link">
+                    <a href="">Mentions légales</a>
+                    <a href="">Contact</a>
+                </div>
+            </div>
+            <div class="footer-logo">
+                <span>ohmyfood</span>
+            </div>
+        </div>
+    </footer>
 </body>
