--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="footer-link">
                     <a href="">Mentions légales</a>
-                    <a href="">Contact</a>
+                    <a href="mailto:contact@ohmyfood.com">Contact</a>
                 </div>
             </div>
             <div class="footer-logo">
@@ -152,7 +152,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
