improve card animation

--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -26,12 +26,12 @@
             <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
         </div>
         <section class="section-container -light">
-            <div class="section-content -grey -index-1 -rounded -v50 -h100 flex -column -gap40">
+            <div class="section-content -grey -index-1 -rounded -v50 -h100 flex -column -middle -gap40">
                 <div class="flex -center -middle -gap20">
                     <h1 class="section-title -secondary">La pallette du goût</h1>
                     <input class="heart-icon -s24" type="checkbox">
                 </div>
-                <section class="section-menu flex -column -gap12">
+                <section class="section-menu flex -column -gap17">
                     <h2 class="text -under-line -upper">Entrées</h2>
                     <div class="grid -gap12">
                         <div class="card -card-menu flex -nowrap">
@@ -40,17 +40,139 @@
                                     <h3>Fricassée d'escargots</h3>
                                     <span class="text">Au piment d'Espelette</span>
                                 </div>
-                                <div class="flex -bottom">
-                                    <span class="text -extra-bold">25€</span>
-                                </div>
+                            </div>
+                            <div class="card-price flex -bottom">
+                                <span class="text -extra-bold">25€</span>
                             </div>
                             <div class="card-menu-success">
                                 <i class="fa-regular fa-circle-check"></i>
                             </div>
                         </div>
-                        <div class="card -g1">Entrées</div>
+                        <div class="card -card-menu flex -nowrap">
+                            <div class="section-content -h15 -v10 flex -nowrap">
+                                <div class="card-menu-description -g1">
+                                    <h3>Foie gras de canard mi-cuit</h3>
+                                    <span class="text">Et ses copeaux de truffe noire</span>
+                                </div>
+                            </div>
+                            <div class="card-price flex -bottom">
+                                <span class="text -extra-bold">35€</span>
+                            </div>
+                            <div class="card-menu-success">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                        <div class="card -card-menu flex -nowrap">
+                            <div class="section-content -h15 -v10 flex -nowrap">
+                                <div class="card-menu-description -g1">
+                                    <h3>Œuf au plat</h3>
+                                    <span class="text">Assaisonné à la truffe sur lit de caviar</span>
+                                </div>
+                            </div>
+                            <div class="card-price flex -bottom">
+                                <span class="text -extra-bold">20€</span>
+                            </div>
+                            <div class="card-menu-success">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
                     </div>
                 </section>
+                <section class="section-menu flex -column -gap17">
+                    <h2 class="text -under-line -upper">Plats</h2>
+                    <div class="grid -gap12">
+                        <div class="card -card-menu flex -nowrap">
+                            <div class="section-content -h15 -v10 flex -nowrap">
+                                <div class="card-menu-description -g1">
+                                    <h3>Filet de bœuf aux herbes</h3>
+                                    <span class="text">Accompagné de sa ribambelle de légumes</span>
+                                </div>
+                            </div>
+                            <div class="card-price flex -bottom">
+                                <span class="text -extra-bold">40€</span>
+                            </div>
+                            <div class="card-menu-success">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                        <div class="card -card-menu flex -nowrap">
+                            <div class="section-content -h15 -v10 flex -nowrap">
+                                <div class="card-menu-description -g1">
+                                    <h3>Parmentier de queue de bœuf</h3>
+                                    <span class="text">À la truffe noire sur sa purée de panais</span>
+                                </div>
+                            </div>
+                            <div class="card-price flex -bottom">
+                                <span class="text -extra-bold">35€</span>
+                            </div>
+                            <div class="card-menu-success">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                        <div class="card -card-menu flex -nowrap">
+                            <div class="section-content -h15 -v10 flex -nowrap">
+                                <div class="card-menu-description -g1">
+                                    <h3>Filet de turbot</h3>
+                                    <span class="text">Aux agrumes</span>
+                                </div>
+                            </div>
+                            <div class="card-price flex -bottom">
+                                <span class="text -extra-bold">44€</span>
+                            </div>
+                            <div class="card-menu-success">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="section-menu flex -column -gap17">
+                    <h2 class="text -under-line -upper">Desserts</h2>
+                    <div class="grid -gap12">
+                        <div class="card -card-menu flex -nowrap">
+                            <div class="section-content -h15 -v10 flex -nowrap">
+                                <div class="card-menu-description -g1">
+                                    <h3>Paris-Brest</h3>
+                                    <span class="text">Revisité</span>
+                                </div>
+                            </div>
+                            <div class="card-price flex -bottom">
+                                <span class="text -extra-bold">18€</span>
+                            </div>
+                            <div class="card-menu-success">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                        <div class="card -card-menu flex -nowrap">
+                            <div class="section-content -h15 -v10 flex -nowrap">
+                                <div class="card-menu-description -g1">
+                                    <h3>Macaron au chocolat d'exception</h3>
+                                    <span class="text">Et glace à la vanille de Madagascar</span>
+                                </div>
+                            </div>
+                            <div class="card-price flex -bottom">
+                                <span class="text -extra-bold">22€</span>
+                            </div>
+                            <div class="card-menu-success">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                        <div class="card -card-menu flex -nowrap">
+                            <div class="section-content -h15 -v10 flex -nowrap">
+                                <div class="card-menu-description -g1">
+                                    <h3>Mousse au chocolat</h3>
+                                    <span class="text">Au piment d'Espelette et à la truffe noire</span>
+                                </div>
+                            </div>
+                            <div class="card-price flex -bottom">
+                                <span class="text -extra-bold">23€</span>
+                            </div>
+                            <div class="card-menu-success">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <button class="button-rounded">Commander</button>
             </div>
         </section>
     </main>
