add card animation

--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -23,19 +23,19 @@
     </header>
     <main>
         <div class="thumbnail-image">
-            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de couverture du restaurant La palette du goût">
         </div>
         <section class="section-container -light">
-            <div class="section-content -grey -index-1 -rounded -v50 -h100 flex -column -middle -gap40">
+            <div class="section-content -grey -index-1 -rounded -v50 -h100 -mobile-h10 flex -column -middle -gap40">
                 <div class="flex -center -middle -gap20">
                     <h1 class="section-title -secondary">La pallette du goût</h1>
-                    <input class="heart-icon -s24" type="checkbox">
+                    <i class="heart-icon -s24"></i>
                 </div>
                 <section class="section-menu flex -column -gap17">
                     <h2 class="text -under-line -upper">Entrées</h2>
-                    <div class="grid -gap12">
-                        <div class="card -card-menu flex -nowrap">
-                            <div class="section-content -h15 -v10 flex -nowrap">
+                    <div class="section-animation grid -gap12">
+                        <div class="card -card-menu -delay-1 flex -nowrap">
+                            <div class="section-content">
                                 <div class="card-menu-description -g1">
                                     <h3>Fricassée d'escargots</h3>
                                     <span class="text">Au piment d'Espelette</span>
@@ -48,8 +48,8 @@
                                 <i class="fa-regular fa-circle-check"></i>
                             </div>
                         </div>
-                        <div class="card -card-menu flex -nowrap">
-                            <div class="section-content -h15 -v10 flex -nowrap">
+                        <div class="card -card-menu -delay-2 flex -nowrap">
+                            <div class="section-content">
                                 <div class="card-menu-description -g1">
                                     <h3>Foie gras de canard mi-cuit</h3>
                                     <span class="text">Et ses copeaux de truffe noire</span>
@@ -62,8 +62,8 @@
                                 <i class="fa-regular fa-circle-check"></i>
                             </div>
                         </div>
-                        <div class="card -card-menu flex -nowrap">
-                            <div class="section-content -h15 -v10 flex -nowrap">
+                        <div class="card -card-menu -delay-3 flex -nowrap">
+                            <div class="section-content">
                                 <div class="card-menu-description -g1">
                                     <h3>Œuf au plat</h3>
                                     <span class="text">Assaisonné à la truffe sur lit de caviar</span>
@@ -80,9 +80,9 @@
                 </section>
                 <section class="section-menu flex -column -gap17">
                     <h2 class="text -under-line -upper">Plats</h2>
-                    <div class="grid -gap12">
-                        <div class="card -card-menu flex -nowrap">
-                            <div class="section-content -h15 -v10 flex -nowrap">
+                    <div class="section-animation grid -gap12">
+                        <div class="card -card-menu -delay-4 flex -nowrap">
+                            <div class="section-content">
                                 <div class="card-menu-description -g1">
                                     <h3>Filet de bœuf aux herbes</h3>
                                     <span class="text">Accompagné de sa ribambelle de légumes</span>
@@ -95,8 +95,8 @@
                                 <i class="fa-regular fa-circle-check"></i>
                             </div>
                         </div>
-                        <div class="card -card-menu flex -nowrap">
-                            <div class="section-content -h15 -v10 flex -nowrap">
+                        <div class="card -card-menu -delay-5 flex -nowrap">
+                            <div class="section-content">
                                 <div class="card-menu-description -g1">
                                     <h3>Parmentier de queue de bœuf</h3>
                                     <span class="text">À la truffe noire sur sa purée de panais</span>
@@ -109,8 +109,8 @@
                                 <i class="fa-regular fa-circle-check"></i>
                             </div>
                         </div>
-                        <div class="card -card-menu flex -nowrap">
-                            <div class="section-content -h15 -v10 flex -nowrap">
+                        <div class="card -card-menu -delay-6 flex -nowrap">
+                            <div class="section-content">
                                 <div class="card-menu-description -g1">
                                     <h3>Filet de turbot</h3>
                                     <span class="text">Aux agrumes</span>
@@ -127,9 +127,9 @@
                 </section>
                 <section class="section-menu flex -column -gap17">
                     <h2 class="text -under-line -upper">Desserts</h2>
-                    <div class="grid -gap12">
-                        <div class="card -card-menu flex -nowrap">
-                            <div class="section-content -h15 -v10 flex -nowrap">
+                    <div class="section-animation grid -gap12">
+                        <div class="card -card-menu -delay-7 flex -nowrap">
+                            <div class="section-content">
                                 <div class="card-menu-description -g1">
                                     <h3>Paris-Brest</h3>
                                     <span class="text">Revisité</span>
@@ -142,8 +142,8 @@
                                 <i class="fa-regular fa-circle-check"></i>
                             </div>
                         </div>
-                        <div class="card -card-menu flex -nowrap">
-                            <div class="section-content -h15 -v10 flex -nowrap">
+                        <div class="card -card-menu -delay-8 flex -nowrap">
+                            <div class="section-content">
                                 <div class="card-menu-description -g1">
                                     <h3>Macaron au chocolat d'exception</h3>
                                     <span class="text">Et glace à la vanille de Madagascar</span>
@@ -156,8 +156,8 @@
                                 <i class="fa-regular fa-circle-check"></i>
                             </div>
                         </div>
-                        <div class="card -card-menu flex -nowrap">
-                            <div class="section-content -h15 -v10 flex -nowrap">
+                        <div class="card -card-menu -delay-9 flex -nowrap">
+                            <div class="section-content">
                                 <div class="card-menu-description -g1">
                                     <h3>Mousse au chocolat</h3>
                                     <span class="text">Au piment d'Espelette et à la truffe noire</span>
@@ -180,18 +180,18 @@
         <div class="footer-content">
             <div class="footer-links">
                 <div class="footer-illustrated-link">
-                    <a href="">
+                    <a href="#">
                         <i class="fa-solid fa-utensils"></i>
                         <span>Proposer un restaurant</span>
                     </a>
-                    <a href="">
+                    <a href="#">
                         <i class="fa-solid fa-handshake-angle"></i>
                         <span>Devenir partenaire</span>
                     </a>
                 </div>
                 <div class="footer-link">
-                    <a href="">Mentions légales</a>
-                    <a href="">Contact</a>
+                    <a href="#">Mentions légales</a>
+                    <a href="mailto:contact@ohmyfood.com">Contact</a>
                 </div>
             </div>
             <div class="footer-logo">
