--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
         <section class="section-container -light">
             <div class="section-content -s50 flex -column -center -gap20 -mobile-h20 -mobile-v40">
                 <h2 class="section-sub-title">Fonctionnement</h2>
-                <div class="flex -row -gap40">
-                    <div class="card-info -g1">
+                <div class="section-steps -gap40">
+                    <div class="card-info">
                         <span class="card-number">1</span>
                         <i class="fa-solid fa-mobile-screen-button"></i>
                         <span>Choisissez un restaurant</span>
                     </div>
-                    <div class="card-info -g1">
+                    <div class="card-info">
                         <span class="card-number">2</span>
                         <i class="fa-solid fa-list-ul"></i>
                         <span>Composez votre menu</span>
                     </div>
-                    <div class="card-info -g1">
+                    <div class="card-info">
                         <span class="card-number">3</span>
                         <i class="fa-solid fa-store"></i>
                         <span>Dégustez au restaurant</span>
@@ -73,11 +73,11 @@
                                     <h4 class="text -card-title">Ménilmontant</h4>
                                 </a>
                             </div>
-                            <input class="heart-icon" type="checkbox">
+                            <i class="heart-icon"></i>
                         </div>
                     </article>
                     <article class="card">
-                        <a href="./restaurants/la_palette_du_gout.html">
+                        <a href="./restaurants/la_note_enchantee.html">
                             <div class="card-image">
                                 <span class="image-flag">Nouveau</span>
                                 <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de couverture du restaurant La note enchantée">
@@ -85,44 +85,44 @@
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
-                                <a href="./restaurants/la_palette_du_gout.html">
+                                <a href="./restaurants/la_note_enchantee.html">
                                     <h3>La note enchantée</h3>
                                     <h4 class="text -card-title">Charonne</h4>
                                 </a>
                             </div>
-                            <input class="heart-icon" type="checkbox">
+                            <i class="heart-icon"></i>
                         </div>
                     </article>
                     <article class="card">
-                        <a href="./restaurants/la_palette_du_gout.html">
+                        <a href="./restaurants/a_la_francaise.html">
                         <div class="card-image">
                             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de couverture du restaurant À la française">
                         </div>
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
-                                <a href="./restaurants/la_palette_du_gout.html">
+                                <a href="./restaurants/a_la_francaise.html">
                                     <h3>À la française</h3>
                                     <h4 class="text -card-title">Cité Rouge</h4>
                                 </a>
                             </div>
-                            <input class="heart-icon" type="checkbox">
+                            <i class="heart-icon"></i>
                         </div>
                     </article>
                     <article class="card">
-                        <a href="./restaurants/la_palette_du_gout.html">
+                        <a href="./restaurants/le_delice_des_sens.html">
                         <div class="card-image">
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de couverture du restaurant Le délice des sens">
                         </div>
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
-                                <a class="prevent-event" href="./restaurants/la_palette_du_gout.html">
+                                <a class="prevent-event" href="./restaurants/le_delice_des_sens.html">
                                     <h3>Le délice des sens</h3>
                                     <h4 class="text -card-title">Folie-Méricourt</h4>
                                 </a>
                             </div>
-                            <input class="heart-icon" type="checkbox">
+                            <i class="heart-icon"></i>
                         </div>
                     </article>
                 </div>
