--- a/index.html
+++ b/index.html
@@ -60,11 +60,9 @@
                 <h2 class="section-sub-title">Restaurants</h2>
                 <div class="card-container -c2 -gap17-40">
                     <article class="card">
-                        <a href="./restaurants/la_palette_du_gout.html">
-                            <div class="card-image">
-                                <span class="image-flag">Nouveau</span>
-                                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de couverture du restaurant La palette du goût">
-                            </div>
+                        <a class="card-image" href="./restaurants/la_palette_du_gout.html">
+                            <span class="image-flag">Nouveau</span>
+                            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de couverture du restaurant La palette du goût">
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
@@ -77,11 +75,9 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a href="./restaurants/la_note_enchantee.html">
-                            <div class="card-image">
-                                <span class="image-flag">Nouveau</span>
-                                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de couverture du restaurant La note enchantée">
-                            </div>
+                        <a class="card-image" href="./restaurants/la_note_enchantee.html">
+                            <span class="image-flag">Nouveau</span>
+                            <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de couverture du restaurant La note enchantée">
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
@@ -94,10 +90,8 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a href="./restaurants/a_la_francaise.html">
-                        <div class="card-image">
+                        <a class="card-image" href="./restaurants/a_la_francaise.html">
                             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de couverture du restaurant À la française">
-                        </div>
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
@@ -110,10 +104,8 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a href="./restaurants/le_delice_des_sens.html">
-                        <div class="card-image">
+                        <a class="card-image" href="./restaurants/le_delice_des_sens.html">
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de couverture du restaurant Le délice des sens">
-                        </div>
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
