--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
                 <h2 class="section-sub-title">Restaurants</h2>
                 <div class="card-container -c2 -gap17-40">
                     <article class="card">
-                        <a class="card-image" href="./restaurants/la_palette_du_gout.html">
-                            <span class="image-flag">Nouveau</span>
-                            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de couverture du restaurant La palette du goût">
+                        <a href="./restaurants/la_palette_du_gout.html">
+                            <div class="card-image">
+                                <span class="image-flag">Nouveau</span>
+                                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de couverture du restaurant La palette du goût">
+                            </div>
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
@@ -75,9 +77,11 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a class="card-image" href="./restaurants/la_note_enchantee.html">
-                            <span class="image-flag">Nouveau</span>
-                            <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de couverture du restaurant La note enchantée">
+                        <a href="./restaurants/la_note_enchantee.html">
+                            <div class="card-image">
+                                <span class="image-flag">Nouveau</span>
+                                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de couverture du restaurant La note enchantée">
+                            </div>
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
@@ -90,8 +94,10 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a class="card-image" href="./restaurants/a_la_francaise.html">
+                        <a href="./restaurants/a_la_francaise.html">
+                        <div class="card-image">
                             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de couverture du restaurant À la française">
+                        </div>
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
@@ -104,8 +110,10 @@
                         </div>
                     </article>
                     <article class="card">
-                        <a class="card-image" href="./restaurants/le_delice_des_sens.html">
+                        <a href="./restaurants/le_delice_des_sens.html">
+                        <div class="card-image">
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de couverture du restaurant Le délice des sens">
+                        </div>
                         </a>
                         <div class="card-content flex -middle -between">
                             <div class="flex -column -gap5">
