--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -19,7 +19,7 @@
         <a href="../index.html" class="header-back-icon">
             <i class="fa-solid fa-arrow-left"></i>
         </a>
-        <img src="../images/logo/ohmyfood.png" alt="Logo de l'application OhMyFood"/>
+        <img src="../images/logo/ohmyfood.png" alt="Logo de l'application OhMyFood">
     </header>
     <main>
         <div class="thumbnail-image">
