fix heart icon in firefox

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                     <h4 class="text -card-title">Ménilmontant</h4>
                                 </a>
                             </div>
-                            <i class="heart-icon"></i>
+                            <input type="checkbox" class="heart-icon" />
                         </div>
                     </article>
                     <article class="card">
@@ -90,7 +90,7 @@
                                     <h4 class="text -card-title">Charonne</h4>
                                 </a>
                             </div>
-                            <i class="heart-icon"></i>
+                            <input type="checkbox" class="heart-icon" />
                         </div>
                     </article>
                     <article class="card">
@@ -106,7 +106,7 @@
                                     <h4 class="text -card-title">Cité Rouge</h4>
                                 </a>
                             </div>
-                            <i class="heart-icon"></i>
+                            <input type="checkbox" class="heart-icon" />
                         </div>
                     </article>
                     <article class="card">
@@ -122,7 +122,7 @@
                                     <h4 class="text -card-title">Folie-Méricourt</h4>
                                 </a>
                             </div>
-                            <i class="heart-icon"></i>
+                            <input type="checkbox" class="heart-icon" />
                         </div>
                     </article>
                 </div>
