removed unused backslash

--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -29,7 +29,7 @@
         <div class="section-content -grey -index-1 -rounded -v50 -h100 -mobile-h10 flex -column -middle -gap40">
             <div class="flex -center -middle -gap20">
                 <h1 class="section-title -secondary">Le délice des sens</h1>
-                <input type="checkbox" class="heart-icon" />
+                <input type="checkbox" class="heart-icon">
             </div>
             <section class="section-menu flex -column -gap17">
                 <h2 class="text -under-line -upper">Entrées</h2>
