change approch from "desktop first " to "mobile first "

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             <span>Paris, Belleville</span>
         </div>
         <section class="section-container">
-            <div class="section-content -s30 flex -column -center -middle -gap30 -mobile-gap30">
-                <div class="section-content -h30 flex -column -center -middle -gap30 -mobile-gap10">
+            <div class="section-content -s30 flex -column -center -middle -gap30">
+                <div class="section-content -h30 flex -column -center -middle -gap10 -desktop-gap30">
                     <h1 class="section-title">Réservez le menu qui vous convient</h1>
-                    <span class="text -dark-light -mobile-centered">Découvrez des restaurants d’exception, sélectionnés par nos soins.</span>
+                    <span class="text -dark-light -center">Découvrez des restaurants d’exception, sélectionnés par nos soins.</span>
                 </div>
                 <button class="button-rounded">Explorer nos restaurants</button>
             </div>
         </section>
         <section class="section-container -light">
-            <div class="section-content -s50 flex -column -center -gap20 -mobile-h20 -mobile-v40">
+            <div class="section-content -h20 -v50 flex -column -center -gap20 -desktop-s50">
                 <h2 class="section-sub-title">Fonctionnement</h2>
                 <div class="section-steps -gap40">
                     <div class="card-info">
@@ -56,9 +56,9 @@
             </div>
         </section>
         <section class="section-container">
-            <div class="section-content -s40 -mobile-h20 -mobile-v50 flex -wrap -center -column -gap40 -mobile-gap20">
+            <div class="section-content -h20 -v50 -desktop-s40 flex -wrap -center -column -gap20 -desktop-gap40">
                 <h2 class="section-sub-title">Restaurants</h2>
-                <div class="card-container -c2 -gap17-40">
+                <div class="card-container -c1 -desktop-c2 -gap17-40">
                     <article class="card">
                         <a href="./restaurants/la_palette_du_gout.html">
                             <div class="card-image">
