--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -26,7 +26,7 @@
         <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de couverture du restaurant À la française">
     </div>
     <section class="section-container -light">
-        <div class="section-content -grey -index-1 -rounded -v50 -h100 -mobile-h10 flex -column -middle -gap40">
+        <div class="section-content -grey -index-1 -rounded -v50 -h10 -desktop-h100 flex -column -middle -gap40">
             <div class="flex -center -middle -gap20">
                 <h1 class="section-title -secondary">À la française</h1>
                 <input type="checkbox" class="heart-icon">
