--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -26,7 +26,7 @@
         <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image de couverture du restaurant La note enchantée">
     </div>
     <section class="section-container -light">
-        <div class="section-content -grey -index-1 -rounded -v50 -h100 -mobile-h10 flex -column -middle -gap40">
+        <div class="section-content -grey -index-1 -rounded -v50 -h10 -desktop-h100 flex -column -middle -gap40">
             <div class="flex -center -middle -gap20">
                 <h1 class="section-title -secondary">La note enchantée</h1>
                 <input type="checkbox" class="heart-icon">
