--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -26,7 +26,7 @@
         <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de couverture du restaurant Le délice des sens">
     </div>
     <section class="section-container -light">
-        <div class="section-content -grey -index-1 -rounded -v50 -h100 -mobile-h10 flex -column -middle -gap40">
+        <div class="section-content -grey -index-1 -rounded -v50 -h10 -desktop-h100 flex -column -middle -gap40">
             <div class="flex -center -middle -gap20">
                 <h1 class="section-title -secondary">Le délice des sens</h1>
                 <input type="checkbox" class="heart-icon">
